--- a/public/index.html
+++ b/public/index.html
@@ -26,9 +26,23 @@
                 <div class="logo">Chatroom</div>
                 <button id="exit-chat">Exit</button>
             </div>
-            <div class="messages">               
-                
-                
+            <div class="messages">
+                <!-- dummy messages -->
+                <!-- <div class="message my-message">
+                    <div>
+                        <div class="name">You</div>
+                        <div class="text">Hi</div>
+                    </div>
+                </div>
+                <div class="update">
+                    Abc just joined the conversation
+                </div>
+                <div class="message other-message">
+                    <div>
+                        <div class="name">Abc</div>
+                        <div class="text">Hello</div>
+                    </div>
+                </div> -->
             </div>
             <div class="typebox">
                 <input type="text" id="message-input">
