--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
             </div>
             <div class="typebox">
                 <input type="text" id="message-input">
-                <button id="send-message">Send</button>
+                <button class="send-message">Send</button>
             </div>
         </div>
     </div>
